--- a/сss/styles.css
+++ b/сss/styles.css
@@ -328,7 +328,6 @@ body {
 
 .directions .item {
   position: relative;
-  z-index: 2;
 
   height: 294px;
 
@@ -337,10 +336,6 @@ body {
 
 .directions .item:last-child {
   margin-right: 0;
-}
-
-.directions-thumb {
-  position: relative;
 }
 
 .directions .item::after {
@@ -687,9 +682,10 @@ body {
 
 .footer-social {
   padding-top: 72px;
+  margin-right: 94px;
 }
 
-.footer-text {
+.footer-social-text {
   margin-top: 0;
   margin-bottom: 20px;
 
@@ -701,7 +697,7 @@ body {
   text-transform: uppercase;
 }
 
-.footer-link {
+.footer-social-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -712,8 +708,8 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer-link:hover,
-.footer-link:focus {
+.footer-social-link:hover,
+.footer-social-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -723,25 +719,22 @@ body {
   fill: currentColor;
 }
 
-.footer-list {
+.footer-social-list {
   display: flex;
 }
 
-.footer-list .item {
+.footer-social-list .item:not(:last-child) {
   margin-right: 10px;
-}
-
-footer-list .item:last-child {
-  margin-right: 94px;
 }
 
 /* Подписка */
 
 .subscribe {
   padding-top: 72px;
-  margin-left: auto;
 }
-.subscribe .text {
+
+.footer-form label {
+  display: block;
   margin-top: 0;
   margin-bottom: 20px;
 
@@ -751,6 +744,30 @@ footer-list .item:last-child {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+}
+
+.subscribe input {
+  width: 358px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 15px 16px;
+  /* margin-right: 12px; */
+}
+
+.form-btn {
+  margin-left: 12px;
+}
+
+.form-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-field {
+  display: flex;
+  align-items: flex-end;
 }
 
 .footer-btn {
@@ -773,4 +790,161 @@ footer-list .item:last-child {
 
 .footer-btn-icon {
   margin-left: 10px;
+}
+
+/* Модальное окно */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* .backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+} */
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  padding: 40px;
+  width: 528px;
+  height: 581px;
+
+  background-color: var(--primary-white-color);
+}
+
+.form-title {
+  margin-top: 0;
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+
+  color: var(--title-color);
+}
+
+.modal-form {
+  width: 448px;
+}
+
+.modal-form label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: var(--primary-text-color);
+}
+
+.form-group {
+  position: relative;
+  display: flex;
+  flex-direction: column-reverse;
+  margin-bottom: 10px;
+}
+
+.form-input {
+  padding: 12px 12px 12px 42px;
+  margin-top: 4px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.input-icon {
+  position: absolute;
+  left: 15px;
+  bottom: 14px;
+
+  width: 18px;
+  height: 18px;
+}
+
+.modal-form .comment {
+  display: flex;
+
+  margin-bottom: 20px;
+  height: 120px;
+  width: 100%;
+  resize: none;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.checkbox {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.checkbox .checkbox-text {
+  margin-left: 8.38px;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  text-transform: none;
+}
+
+.checkbox-link {
+  color: var(--accent-color);
+}
+
+.form-button {
+  text-align: center;
+}
+.snd-btn {
+  min-width: 200px;
+  padding: 10px 55px;
+  margin-left: auto;
+  margin-right: auto;
+
+  background: var(--accent-color);
+  color: var(--primary-white-color);
+  border-color: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+}
+
+.cls-btn {
+  display: flex;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+  padding-top: 6px;
+  padding-left: 6px;
+
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: var(--accent-color);
+  background-color: var(--primary-white-color);
+
+  cursor: pointer;
+}
+
+.cls-btn:hover .cls-btn-icon {
+  fill: currentColor;
 }
