--- a/сss/styles.css
+++ b/сss/styles.css
@@ -753,14 +753,13 @@ body {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding: 15px 16px;
-  /* margin-right: 12px; */
 }
 
 .form-btn {
   margin-left: 12px;
 }
 
-.form-input {
+.footer-form-input {
   display: flex;
   flex-direction: column;
 }
@@ -823,18 +822,6 @@ body {
   background-color: var(--primary-white-color);
 }
 
-.form-title {
-  margin-top: 0;
-  margin-bottom: 12px;
-
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-
-  color: var(--title-color);
-}
-
 .modal-form {
   width: 448px;
 }
@@ -848,45 +835,107 @@ body {
   color: var(--primary-text-color);
 }
 
+.form-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+
+  color: var(--title-color);
+}
+
 .form-group {
   position: relative;
+
   display: flex;
   flex-direction: column-reverse;
-  margin-bottom: 10px;
+  margin-bottom: 28px;
 }
 
 .form-input {
   padding: 12px 12px 12px 42px;
-  margin-top: 4px;
 
+  outline-color: var(--accent-color);
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-label {
+  position: absolute;
+  top: 50%;
+  left: 42px;
+
+  transform: translateY(-50%);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-group:focus-within > .form-label,
+.form-input:not(:placeholder-shown) ~ .form-label {
+  color: var(--accent-color);
+  transform: translate(-25px, -40px);
+}
+
+.form-group:focus-within .input-icon {
+  fill: var(--accent-color);
 }
 
 .input-icon {
   position: absolute;
-  left: 15px;
-  bottom: 14px;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
 
   width: 18px;
   height: 18px;
 }
+/* Textarea/Коментарии */
+.comment {
+  display: block;
+  position: relative;
+}
 
-.modal-form .comment {
+.comment-label {
+  position: absolute;
+  top: 12px;
+  left: 16px;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment:focus-within .comment-label {
+  color: var(--accent-color);
+  transform: translateY(-30px);
+}
+
+.comment:not(:placeholder-shown) + .comment-label {
+  transform: translateY(-30px);
+}
+
+.comment .textarea {
   display: flex;
 
+  padding: 12px 16px;
   margin-bottom: 20px;
   height: 120px;
   width: 100%;
   resize: none;
 
+  outline-color: var(--accent-color);
+  cursor: pointer;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
 
-.checkbox {
+/* .checkbox {
   display: flex;
   align-items: center;
+
+  padding-left: 13px;
   margin-bottom: 30px;
 }
 
@@ -899,7 +948,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   text-transform: none;
-}
+} */
 
 .checkbox-link {
   color: var(--accent-color);
@@ -924,6 +973,8 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+
+  cursor: pointer;
 }
 
 .cls-btn {
