--- a/сss/styles.css
+++ b/сss/styles.css
@@ -803,10 +803,10 @@ body {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-/* .backdrop.is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-} */
+}
 
 .modal {
   position: absolute;
