--- a/сss/styles.css
+++ b/сss/styles.css
@@ -800,7 +800,11 @@ body {
   width: 100%;
   height: 100%;
 
+  opacity: 1;
+
   background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -812,13 +816,19 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
 
   padding: 40px;
   width: 528px;
   height: 581px;
 
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   background-color: var(--primary-white-color);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.2);
 }
 
 .modal-form {
